[package]
name = "cohost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
hmac = "0.12.1"
pbkdf2 = { version = "0.11.0", default-features = false }
reqwest = { version = "0.11.11", features = ["json"] }
secrecy = "0.8.0"
serde = { version = "1.0.138", features = ["derive"] }
sha2 = "0.10.2"
thiserror = "1.0.31"
